# face_yoga_backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
asserts/: requirements.md
config/: global_config.py
constants/: __init__.py
core/: __init__.py  core.py
detector/: __init__.py  face.py  hand.py
utils/: __init__.py  camera_helper.py  common.py  draw_helper.py  face_helper.py  hand_helper.py  video_helper.py
